# noren

./: AGENTS.md  Cargo.toml  README.md  terrain.rdb
.github/workflows/: ci.yml
docs/: dashi_preview.md  terrain_rdb.md
examples/: README.md
examples/bindless_render/: README.md  main.rs
examples/common/: display.rs  mod.rs
examples/geometry_render/: README.md  main.rs
examples/graphics_pipeline_execution/: main.rs
examples/hello_database/: README.md  main.rs
examples/image_blit/: README.md  main.rs
examples/material_render/: main.rs
examples/model_render/: README.md  main.rs
examples/pipeline_layouts/: README.md  main.rs
examples/skeleton_animation_load/: main.rs
examples/terrain_heightmap/: main.rs
sample/: README.md
sample/db/: README.md  animations.rdb  atlases.json  audio.rdb  fonts.rdb  geometry.rdb  imagery.rdb  layout.json  materials.json  meshes.json  models.json  msdf_fonts.json  render_passes.json  sdf_fonts.json  shaders.json  shaders.rdb  skeletons.rdb  terrain.rdb  textures.json
sample/sample_pre/: materials.json  meshes.json  models.json  norenbuild.json  shaders.json  textures.json
sample/sample_pre/gltf/: Witch.glb  quad.gltf
sample/sample_pre/shaders/: bind_table.frag  bind_table.vert  multi_bind.frag  multi_bind.vert  quad.frag  quad.vert
src/: defaults.rs  error.rs  furikake_state.rs  lib.rs  material_bindings.rs  rdbfile.rs  render_graph.rs
src/datatypes/: bind_table_layout.rs  geometry.rs  imagery.rs  mod.rs  render_pass.rs  shader.rs
src/datatypes/primitives/: mod.rs
src/exec/dbgen/: README.md  bin.rs
src/exec/material_editor/: bin.rs
src/exec/noren_tgen/: bin.rs  editor.rs
src/exec/rdbinspect/: bin.rs
src/exec/terrain_editor/: editor.rs
src/material_editor/: io.rs  mod.rs  preview.rs  project.rs  ui.rs
src/material_editor_types/: mod.rs
src/meta/: atlases.rs  fonts.rs  materials.rs  meshes.rs  mod.rs  model.rs  models.rs  names.rs  shaders.rs  textures.rs
src/parsing/: mod.rs
src/rdb/: animation.rs  audio.rs  bind_group_layout.rs  bind_table_layout.rs  font.rs  geometry.rs  imagery.rs  mod.rs  render_pass.rs  shader.rs  skeleton.rs  terrain.rs
src/rdb/primitives/: mod.rs
src/shaders/: preview.frag.glsl  preview.vert.glsl
src/terrain/: build.rs
src/tools/: dbgen.rs  mod.rs  rdb.rs
src/utils/: data_cache.rs  error.rs  mod.rs  rdbfile.rs
tests/: examples.rs
