[package]
name = "noren"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
debug = false

[dependencies]
gltf = "1.4.1"  # For reading glTF files
glam = "0.29.3"  # For vector math (Vec2 and Vec3)
image = "0.24"
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
bento = {git = "https://github.com/JordanHendl/gohan"}
furikake = {git = "https://github.com/JordanHendl/gohan"}
tare = {git = "https://github.com/JordanHendl/gohan"}
#bento = {path = "C:/Program Files/Git/wksp/git/gohan/bento"}
#tare = {path = "C:/Program Files/Git/wksp/git/gohan/tare"}
#furikake = {path = "C:/Program Files/Git/wksp/git/gohan/furikake"}

serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
unzip3 = "1.0.0"
fontdue = "0.9.2"
memmap2 = "0.9"
bytemuck = { version = "1.17", features = ["derive"] }
inline-spirv = "0.2"
bincode = "1"
eframe = "0.27"
rfd = "0.14"
serde_yaml = "0.9"
tracing = "0.1"
winit = { version = "0.26" }

[lib]

[[bin]]
name = "dbgen"
path = "src/exec/dbgen/bin.rs"

[[bin]]
name = "rdbinspect"
path = "src/exec/rdbinspect/bin.rs"

[[bin]]
name = "noren_terrain_editor"
path = "src/exec/terrain_editor/bin.rs"

[dev-dependencies]
rand = "0.8"
tempfile = "3"
